[gd_scene load_steps=5 format=3 uid="uid://1mg1kwqqs55w"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_b06a2"]
[ext_resource type="StyleBox" uid="uid://bppuxr75vs1cn" path="res://prefabs/StyleBoxes/Empty.tres" id="2_266fj"]
[ext_resource type="StyleBox" uid="uid://drr3yc6uwji0q" path="res://prefabs/StyleBoxes/Medium.tres" id="3_el6qi"]
[ext_resource type="StyleBox" uid="uid://hj1v2wpa2m4l" path="res://prefabs/StyleBoxes/High.tres" id="3_nntjl"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_b06a2")

[node name="Health" type="Label" parent="."]
z_index = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -621.0
offset_right = 52.0
offset_bottom = -583.0
grow_vertical = 0
text = "HP: "

[node name="HealthValue" type="Label" parent="Health"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -38.0
offset_right = 153.0
grow_vertical = 0
text = "5"

[node name="Time" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -209.0
offset_top = 22.0
offset_right = -87.0
offset_bottom = 60.0
grow_horizontal = 0
text = "Time Elapsed:"

[node name="Panel" type="Panel" parent="Time"]
layout_mode = 0
offset_left = 108.0
offset_top = -1.0
offset_right = 200.0
offset_bottom = 28.0

[node name="Hours" type="Label" parent="Time/Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 3.0
offset_right = 41.0
offset_bottom = 26.0
text = "000:"

[node name="Minutes" type="Label" parent="Time/Panel"]
layout_mode = 0
offset_left = 41.0
offset_top = 3.0
offset_right = 65.0
offset_bottom = 26.0
text = "00:"

[node name="Seconds" type="Label" parent="Time/Panel"]
layout_mode = 0
offset_left = 65.0
offset_top = 3.0
offset_right = 89.0
offset_bottom = 26.0
text = "00"

[node name="Charge" type="Label" parent="."]
z_index = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1134.0
offset_top = -581.0
offset_right = -1061.0
offset_bottom = -543.0
grow_horizontal = 0
grow_vertical = 0
text = "CHARGE: "

[node name="ChargeValue" type="Label" parent="Charge"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -37.0
offset_right = 62.0
offset_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
text = "0"

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 18.0
offset_top = 26.0
offset_right = 336.0
offset_bottom = 53.0
theme_override_styles/background = ExtResource("2_266fj")
theme_override_styles/fill = ExtResource("3_nntjl")
max_value = 5.0
step = 1.0
show_percentage = false

[node name="ChargeBar" type="ProgressBar" parent="."]
offset_left = 18.0
offset_top = 66.0
offset_right = 336.0
offset_bottom = 93.0
theme_override_styles/background = ExtResource("2_266fj")
theme_override_styles/fill = ExtResource("3_el6qi")
step = 1.0
value = 50.0
show_percentage = false
